[project]
name = "IS-GOAT-BURNING"
version = "0.1.0"
description = "This project monitors the Gävle Goat webcam feed to detect if the goat is on fire. It uses computer vision techniques to analyze the video feed and sends email and/or discord notifications if fire is detected."
authors = [
    { name = "Miłosz Białczak" }
]
dependencies = [
    "numpy==2.5.1",
    "yt-dlp==2026.7.4",
    "aiohttp==3.14.1",
    "pydantic-settings==2.14.2",
    "google-genai==2.11.0",
]
requires-python = ">=3.14"
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.14",
]

[project.optional-dependencies]
cpu = [
    "opencv-python==5.0.0.93",
]
dev = [
    "ruff==0.15.21",
    "pre-commit==4.6.0",
    "pip-tools==7.5.3",
    "pytest==9.1.1",
    "pytest-asyncio==1.4.0",
    "pytest-timeout==2.4.0",
    "flake8-docstrings==1.7.0",
    "pytest-mock==3.15.1",
    "pytest-cov==7.1.0",
    "coverage-badge==1.1.2",
]
[tool.ruff]
exclude = [
    "venv",
    ".venv",
]
line-length = 128
indent-width = 4
target-version = "py314"
lint.select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "C",    # flake8-comprehensions
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
    "UP",   # pyupgrade
    "ARG",  # flake8-unused-arguments
    "PGH",  # pygrep-hooks
    "RET",  # flake8-return
]
lint.ignore = [
    "ARG002",
]
# Enable sorting of imports
[tool.ruff.lint.isort]
force-single-line = true
force-sort-within-sections = true

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.setuptools.packages.find]
include = ["is_goat_burning*"]

[build-system]
requires = ["setuptools>=80.9.0", "wheel"]
build-backend = "setuptools.build_meta"
